# LogiOps

./: README.md  dev.nordlex.logiops.json  dev.nordlex.logiops.policy.xml  meson.build  org.nordlex.logiops.json
data/: dev.nordlex.logiops.appdata.xml.in  dev.nordlex.logiops.desktop.in  meson.build  (+3 more)
src/: l-application-resources.c  l-application-resources.h  l-application.c  l-application.h  l-window.c  l-window.h  l.gresource.xml  logiops-application.c  logiops-application.h  logiops-window.c  logiops-window.h  logiops-window.ui  logiops.gresource.xml  main.c  meson.build
src/cfg/: config.cfg  mx-master-3.cfg
src/data/: l-bus-manager.c  l-bus-manager.h  l-conf-reader.c  l-conf-reader.h  l-data-manager.c  l-data-manager.h  l-key-code.c  l-key-code.h  l-key-codes.h
src/gtk/: help-overlay.ui
src/resources/media/: application_style.css
src/resources/ui/: logiops-window.ui
src/types/: description-types.h  l-device-concept.c  l-device-concept.h  l-device.c  l-device.h  l-saver.c  l-saver.h
src/ui/: header-bar.c  header-bar.h  l-action-card.c  l-action-card.h  l-authority-check-page.c  l-authority-check-page.h  l-button-pref-panel.c  l-button-pref-panel.h  l-content-manager.c  l-content-manager.h  l-device-button.c  l-device-button.h  l-device-card.c  l-device-card.h  l-device-page.c  l-device-page.h  l-key-grab-window.c  l-key-grab-window.h  l-keypress-card.c  l-keypress-card.h  l-overview-page.c  l-overview-page.h  l-pref-panel.c  l-pref-panel.h
src/ui/action-cards/: l-action-card.c  l-action-card.h  l-action-row.c  l-action-row.h  l-action-selector.c  l-action-selector.h  l-cycle-card.c  l-cycle-card.h  l-default-card.c  l-default-card.h  l-gesture-card.c  l-gesture-card.h  l-keypress-card.c  l-keypress-card.h  l-keys-label.c  l-keys-label.h
src/ui/device-description/: device-description.c  device-description.h  mx-anywhere-3-description.c  mx-master-3-description.c
src/ui/device-layers/: buttons-layer.c  buttons-layer.h  mx-master-3.c  mx-master-3.h
(+4 files in other folders)
